# AlphaOmegaTheory

./: .gitignore  CURRENT_TASK.md  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.sh  setup.sh
core/: __init__.py  casimir.py  constants.py  context_builder.py  g2_clebsch_gordan.py  g2_structure_constants.py  octonion_algebra.py  octonion_api.py  predictions.py  sedenions.py  triality.py
extensions/: riemann_g2_analysis.py  sedenion_algebra_proofs.py  unified_physics_proofs.py
paper/: aomega_paper_single.tex  build.py  citations.py  citations_update.py  paper_api.py  requirements.txt  structure.py  template_engine.py
physics/: atomic_ionization.py  atomic_periodic.py  atomic_zmax.py  cosmo_dark_energy.py  cosmo_dark_matter.py  cosmo_equilibrium.py  cosmo_gravity.py  particle_anomaly.py  particle_beta_functions.py  particle_ckm.py  particle_coleman_weinberg.py  particle_cross_section.py  particle_fermion_masses.py  particle_fermion_mixing.py  particle_fermion_spectrum.py  particle_field_mapping.py  particle_g2_generators.py  particle_gauge_unification.py  particle_group_embedding.py  particle_gut_coupling.py  particle_higgs_potential.py  particle_higgs_vev.py  particle_lagrangian.py  particle_mass_gap_proof.py  particle_neutrino_masses.py  particle_neutrino_rg.py  particle_oblique.py  particle_pmns.py  particle_pmns_mixing.py  particle_proton_calculation.py  particle_proton_decay.py  particle_quantum_corrections.py  particle_quark_mixing.py  particle_quark_yukawas.py  particle_scattering.py  particle_sedenion_dirac.py  particle_seesaw.py  particle_strong_cp.py  particle_symbolic_sedenion.py  particle_three_generations.py  (+8 more)
security/: build.sh  (+7 more)
(+69 files in other folders)
